--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.1"
   },
   "engines": {
     "node": "15.7.0"
