--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "request": "^2.88.2"
   },
   "engines": {
     "node": "15.7.0"
